# nextflow-aws-logs

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/nextflow_aws_logs/: main.py
tests/: test_main.py
