[project]
name = "nextflow-aws-logs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.46",
    "click>=8.4.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
nextflow-aws-logs = "nextflow_aws_logs.main:cli"

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
]

[tool.uv]
package = true